test/assets/invalid/expect-char-from-string-list.hs
import Data.Char (isSpace)
-- Expected an item, got a list

a :: Int -> Bool
a _ = isSpace ["a"]
